--- a/IN5060_Caro.ipynb
+++ b/IN5060_Caro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 490,
    "id": "initial_id",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 492,
    "id": "369fad1865654bcf",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 493,
    "id": "4bab8a1389236794",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 495,
    "id": "edee7ba47d6ab6d8",
    "metadata": {
     "jupyter": {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 496,
    "id": "c8371b6f6c0ddb96",
    "metadata": {},
    "outputs": [
@@ -154,45 +154,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Date          Time\n",
-      "0  16.12.2020  10:53:22.280\n",
-      "1  16.12.2020  10:53:22.501\n",
-      "2  16.12.2020  10:53:23.445\n",
-      "3  16.12.2020  10:53:23.445\n",
-      "4  16.12.2020  10:53:23.446\n",
+      "             Date          Time\n",
+      "82344  17.12.2020  10:02:58.129\n",
+      "82345  17.12.2020  10:02:58.255\n",
+      "82346  17.12.2020  10:02:58.301\n",
+      "82347  17.12.2020  10:02:58.407\n",
+      "82348  17.12.2020  10:02:58.410\n",
       "NaN values after forward fill:\n",
       "DateTime    0\n",
-      "RSRP        2\n",
-      "RSRQ        2\n",
-      "SINR        2\n",
+      "RSRP        4\n",
+      "RSRQ        4\n",
+      "SINR        4\n",
+      "UE Mode     0\n",
+      "Scenario    0\n",
       "dtype: int64\n",
       "NaN values after removing empty top rows:\n",
       "DateTime    0\n",
       "RSRP        0\n",
       "RSRQ        0\n",
       "SINR        0\n",
+      "UE Mode     0\n",
+      "Scenario    0\n",
       "dtype: int64\n",
-      "Gaming Campaign 1: \n",
-      "                    DateTime  RSRP  RSRQ  SINR\n",
-      "2    2020-12-16 10:53:23.445 -98.0 -15.0  -3.0\n",
-      "3    2020-12-16 10:53:23.445 -98.0 -15.0  -3.0\n",
-      "4    2020-12-16 10:53:23.446 -98.0 -15.0  -3.0\n",
-      "5    2020-12-16 10:53:23.993 -98.0 -15.0  -3.0\n",
-      "6    2020-12-16 10:53:24.718 -98.0 -14.0   1.0\n",
-      "...                      ...   ...   ...   ...\n",
-      "3744 2020-12-16 11:02:53.823 -89.0 -13.0   1.0\n",
-      "3745 2020-12-16 11:02:53.961 -89.0 -14.0   2.0\n",
-      "3746 2020-12-16 11:02:53.962 -89.0 -14.0   2.0\n",
-      "3747 2020-12-16 11:02:54.104 -90.0 -15.0   1.0\n",
-      "3748 2020-12-16 11:02:54.282 -90.0 -15.0   1.0\n",
+      "Gaming Campaign 15: \n",
+      "                     DateTime   RSRP  RSRQ  SINR     UE Mode Scenario\n",
+      "82348 2020-12-17 10:02:58.410 -107.0  -9.0   9.0  5G-enabled       IS\n",
+      "82349 2020-12-17 10:02:58.412 -107.0 -13.0   9.0  5G-enabled       IS\n",
+      "82350 2020-12-17 10:02:58.691 -107.0 -13.0   9.0  5G-enabled       IS\n",
+      "82351 2020-12-17 10:02:58.967 -107.0 -11.0  10.0  5G-enabled       IS\n",
+      "82352 2020-12-17 10:02:58.969 -107.0 -11.0  10.0  5G-enabled       IS\n",
+      "...                       ...    ...   ...   ...         ...      ...\n",
+      "88803 2020-12-17 10:14:46.888  -89.0 -12.0   8.0  5G-enabled       IS\n",
+      "88804 2020-12-17 10:14:47.047  -89.0 -12.0   8.0  5G-enabled       IS\n",
+      "88805 2020-12-17 10:14:47.260  -89.0 -12.0   8.0  5G-enabled       IS\n",
+      "88806 2020-12-17 10:14:47.455  -89.0 -12.0  10.0  5G-enabled       IS\n",
+      "88807 2020-12-17 10:14:47.622  -89.0 -12.0  10.0  5G-enabled       IS\n",
       "\n",
-      "[3747 rows x 4 columns]\n"
+      "[6460 rows x 6 columns]\n"
      ]
     }
    ],
    "source": [
     "# filter data by campaign\n",
-    "all_campaign_data = latency_5g[latency_5g['Campaign'] == 'Gaming_Campaign_1'].copy()\n",
+    "all_campaign_data = latency_5g[latency_5g['Campaign'] == 'Gaming_Campaign_15'].copy() # you can change campaign\n",
     "\n",
     "# check date time format\n",
     "print(all_campaign_data[['Date', 'Time']].head())\n",
@@ -204,8 +208,8 @@
     "    errors='coerce'\n",
     ")\n",
     "\n",
-    "# select only the columns of interest and DateTime\n",
-    "columns_of_interest = ['DateTime', 'RSRP', 'RSRQ', 'SINR']\n",
+    "# select only the columns of interest and DateTime - You can add more columns\n",
+    "columns_of_interest = ['DateTime', 'RSRP', 'RSRQ', 'SINR', 'UE Mode', 'Scenario']\n",
     "campaign_data = all_campaign_data[columns_of_interest]\n",
     "\n",
     "# sort data by datetime\n",
@@ -238,7 +242,7 @@
     "print(campaign_data_sorted.isna().sum())\n",
     "\n",
     "#display sorted data\n",
-    "print('Gaming Campaign 1: ')\n",
+    "print('Gaming Campaign 15: ')\n",
     "print(campaign_data_sorted)"
    ]
   }
