manipulated active dataset after conversation with Kostas

--- a/IN5060_Caro.ipynb
+++ b/IN5060_Caro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 168,
    "id": "initial_id",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 170,
    "id": "369fad1865654bcf",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 171,
    "id": "4bab8a1389236794",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 173,
    "id": "edee7ba47d6ab6d8",
    "metadata": {
     "jupyter": {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 174,
    "id": "c8371b6f6c0ddb96",
    "metadata": {},
    "outputs": [
@@ -160,42 +160,46 @@
       "82346  17.12.2020  10:02:58.301\n",
       "82347  17.12.2020  10:02:58.407\n",
       "82348  17.12.2020  10:02:58.410\n",
-      "NaN values after forward fill:\n",
-      "DateTime    0\n",
-      "RSRP        4\n",
-      "RSRQ        4\n",
-      "SINR        4\n",
-      "UE Mode     0\n",
-      "Scenario    0\n",
-      "dtype: int64\n",
-      "NaN values after removing empty top rows:\n",
-      "DateTime    0\n",
-      "RSRP        0\n",
-      "RSRQ        0\n",
-      "SINR        0\n",
-      "UE Mode     0\n",
-      "Scenario    0\n",
-      "dtype: int64\n",
-      "Gaming Campaign 15: \n",
-      "                     DateTime   RSRP  RSRQ  SINR     UE Mode Scenario\n",
-      "82348 2020-12-17 10:02:58.410 -107.0  -9.0   9.0  5G-enabled       IS\n",
-      "82349 2020-12-17 10:02:58.412 -107.0 -13.0   9.0  5G-enabled       IS\n",
-      "82350 2020-12-17 10:02:58.691 -107.0 -13.0   9.0  5G-enabled       IS\n",
-      "82351 2020-12-17 10:02:58.967 -107.0 -11.0  10.0  5G-enabled       IS\n",
-      "82352 2020-12-17 10:02:58.969 -107.0 -11.0  10.0  5G-enabled       IS\n",
-      "...                       ...    ...   ...   ...         ...      ...\n",
-      "88803 2020-12-17 10:14:46.888  -89.0 -12.0   8.0  5G-enabled       IS\n",
-      "88804 2020-12-17 10:14:47.047  -89.0 -12.0   8.0  5G-enabled       IS\n",
-      "88805 2020-12-17 10:14:47.260  -89.0 -12.0   8.0  5G-enabled       IS\n",
-      "88806 2020-12-17 10:14:47.455  -89.0 -12.0  10.0  5G-enabled       IS\n",
-      "88807 2020-12-17 10:14:47.622  -89.0 -12.0  10.0  5G-enabled       IS\n",
       "\n",
-      "[6460 rows x 6 columns]\n"
+      "NaN values after forward fill:\n",
+      "DateTime                      0\n",
+      "SS-SINR                       0\n",
+      "RAT Info                      0\n",
+      "Cur. Interactivity Score    138\n",
+      "Scenario                      0\n",
+      "Operator                      0\n",
+      "dtype: int64\n",
+      "\n",
+      "NaN values after removing empty top rows:\n",
+      "DateTime                    0\n",
+      "SS-SINR                     0\n",
+      "RAT Info                    0\n",
+      "Cur. Interactivity Score    0\n",
+      "Scenario                    0\n",
+      "Operator                    0\n",
+      "dtype: int64\n",
+      "\n",
+      "Gaming Campaign 15: \n",
+      "                     DateTime  SS-SINR  RAT Info  Cur. Interactivity Score Scenario Operator\n",
+      "82582 2020-12-17 10:03:29.066     19.7  5G EN-DC                      73.6       IS      Op1\n",
+      "82583 2020-12-17 10:03:29.173     17.1  5G EN-DC                      73.6       IS      Op1\n",
+      "82584 2020-12-17 10:03:29.193     17.1  5G EN-DC                      73.6       IS      Op1\n",
+      "82585 2020-12-17 10:03:29.573     17.1  5G EN-DC                      73.6       IS      Op1\n",
+      "82586 2020-12-17 10:03:29.692     19.2  5G EN-DC                      73.6       IS      Op1\n",
+      "...                       ...      ...       ...                       ...      ...      ...\n",
+      "88803 2020-12-17 10:14:46.888     18.9  5G EN-DC                       0.0       IS      Op1\n",
+      "88804 2020-12-17 10:14:47.047     20.7  5G EN-DC                       0.0       IS      Op1\n",
+      "88805 2020-12-17 10:14:47.260     20.7  5G EN-DC                       0.0       IS      Op1\n",
+      "88806 2020-12-17 10:14:47.455     20.7  5G EN-DC                       0.0       IS      Op1\n",
+      "88807 2020-12-17 10:14:47.622     18.5  5G EN-DC                       0.0       IS      Op1\n",
+      "\n",
+      "[6179 rows x 6 columns]\n"
      ]
     }
    ],
    "source": [
     "# filter data by campaign\n",
+    "# each campaign uses only one operator\n",
     "all_campaign_data = latency_5g[latency_5g['Campaign'] == 'Gaming_Campaign_15'].copy() # you can change campaign\n",
     "\n",
     "# check date time format\n",
@@ -209,7 +213,14 @@
     ")\n",
     "\n",
     "# select only the columns of interest and DateTime - You can add more columns\n",
-    "columns_of_interest = ['DateTime', 'RSRP', 'RSRQ', 'SINR', 'UE Mode', 'Scenario']\n",
+    "columns_of_interest = ['DateTime', 'SS-SINR', 'RAT Info', 'Cur. Interactivity Score', 'Scenario', 'Operator']\n",
+    "# todo: only use 5G (check with RAT Info)\n",
+    "# latency: 'Cur. Interactivity Score' (more important for active)\n",
+    "# interference: SS-SINR (might be same as passive, must check that location is the same)\n",
+    "# location: 'GPS Long', 'GPS Lat'\n",
+    "# ensure that scenario is IS\n",
+    "# some campaigns might be same in the passive dataset\n",
+    "\n",
     "campaign_data = all_campaign_data[columns_of_interest]\n",
     "\n",
     "# sort data by datetime\n",
@@ -222,26 +233,34 @@
     "campaign_data_sorted = campaign_data_sorted.infer_objects(copy=False)\n",
     "\n",
     "# Convert relevant columns to numeric, forcing errors to NaN\n",
-    "campaign_data_sorted['RSRP'] = pd.to_numeric(campaign_data_sorted['RSRP'], errors='coerce')\n",
-    "campaign_data_sorted['RSRQ'] = pd.to_numeric(campaign_data_sorted['RSRQ'], errors='coerce')\n",
-    "campaign_data_sorted['SINR'] = pd.to_numeric(campaign_data_sorted['SINR'], errors='coerce')\n",
+    "campaign_data_sorted['SS-SINR'] = pd.to_numeric(campaign_data_sorted['SS-SINR'], errors='coerce')\n",
+    "campaign_data_sorted['Cur. Interactivity Score'] = pd.to_numeric(campaign_data_sorted['Cur. Interactivity Score'], errors='coerce')\n",
     "\n",
     "# forward fill to replace NaN with value from the previous row\n",
     "campaign_data_sorted.ffill(inplace=True)\n",
     "\n",
+    "# we only want indoor static and 5G\n",
+    "campaign_data_sorted = campaign_data_sorted[(campaign_data_sorted['Scenario'] == 'IS') & (campaign_data_sorted['RAT Info'].str.contains('5G'))]\n",
+    "\n",
     "# Check for NaN values after forward filling\n",
     "nan_values = campaign_data_sorted.isna().sum()\n",
+    "print('')\n",
     "print(\"NaN values after forward fill:\")\n",
     "print(nan_values)\n",
     "\n",
     "# Remove initial rows with NaN in all specified columns\n",
-    "if nan_values[['RSRP', 'RSRQ', 'SINR']].any():\n",
-    "    campaign_data_sorted = campaign_data_sorted.dropna(how='all', subset=['RSRP', 'RSRQ', 'SINR'])\n",
+    "if nan_values[['SS-SINR']].any():\n",
+    "    campaign_data_sorted = campaign_data_sorted.dropna(how='all', subset=['SS-SINR'])\n",
     "\n",
+    "if nan_values[['Cur. Interactivity Score']].any():\n",
+    "    campaign_data_sorted = campaign_data_sorted.dropna(how='all', subset=['Cur. Interactivity Score'])\n",
+    "\n",
+    "print('')\n",
     "print('NaN values after removing empty top rows:')\n",
     "print(campaign_data_sorted.isna().sum())\n",
     "\n",
-    "#display sorted data\n",
+    "#display sorted data this is the data you will use for graphs\n",
+    "print('')\n",
     "print('Gaming Campaign 15: ')\n",
     "print(campaign_data_sorted)"
    ]
