--- a/IN5060_Caro.ipynb
+++ b/IN5060_Caro.ipynb
@@ -602,22 +602,22 @@
     }
    ],
    "source": [
-    "campaign_1 = process_campaign_data(latency_5g, 'Gaming_Campaign_1')   # latency always 0.0\n",
+    "#campaign_1 = process_campaign_data(latency_5g, 'Gaming_Campaign_1')   # latency always 0.0\n",
     "campaign_3 = process_campaign_data(latency_5g, 'Gaming_Campaign_3')   # latency could range or always be 0.0\n",
     "campaign_7 = process_campaign_data(latency_5g, 'Gaming_Campaign_7')   # latency ranging from 0.0 to 88.0 or higher\n",
     "campaign_8 = process_campaign_data(latency_5g, 'Gaming_Campaign_8')   # latency could range or always be 0.0\n",
     "campaign_9 = process_campaign_data(latency_5g, 'Gaming_Campaign_9')   # latency ranging from 0.0 to 90.1 or higher\n",
     "campaign_10 = process_campaign_data(latency_5g, 'Gaming_Campaign_10') # latency ranging from 0.0 to 88.8 or higher\n",
-    "campaign_11 = process_campaign_data(latency_5g, 'Gaming_Campaign_11') # latency always 0.0\n",
+    "#campaign_11 = process_campaign_data(latency_5g, 'Gaming_Campaign_11') # latency always 0.0\n",
     "campaign_14 = process_campaign_data(latency_5g, 'Gaming_Campaign_14') # latency ranging from 0.0 to 74.2 or higher\n",
     "campaign_15 = process_campaign_data(latency_5g, 'Gaming_Campaign_15') # latency ranging from 0.0 to 73.6 or higher\n",
     "campaign_16 = process_campaign_data(latency_5g, 'Gaming_Campaign_16') # latency ranging from 0.0 to 84.3 or higher\n",
     "campaign_21 = process_campaign_data(latency_5g, 'Gaming_Campaign_21') # latency ranging from 69.0 or lower to 75.7 or higher\n",
     "campaign_25 = process_campaign_data(latency_5g, 'Gaming_Campaign_25') # latency could range or always be 0.0\n",
     "campaign_27 = process_campaign_data(latency_5g, 'Gaming_Campaign_27') # latency ranging from 0.0 to 88.9 or higher\n",
-    "campaign_32 = process_campaign_data(latency_5g, 'Gaming_Campaign_32') # latency always 0.0\n",
+    "#campaign_32 = process_campaign_data(latency_5g, 'Gaming_Campaign_32') # latency always 0.0\n",
     "campaign_33 = process_campaign_data(latency_5g, 'Gaming_Campaign_33') # latency ranging from 0.0 to 82.3 or higher\n",
-    "campaign_34 = process_campaign_data(latency_5g, 'Gaming_Campaign_34') # latency always 0.0"
+    "#campaign_34 = process_campaign_data(latency_5g, 'Gaming_Campaign_34') # latency always 0.0"
    ]
   },
   {
